# rs-watch

./: Cargo.toml  LICENSE  README.md  build.rs  memory.x
.cargo/: config.toml
binaries/: zswatch_nrf5340_CPUNET.hex
src/: main.rs
src/cst816s/: mod.rs
src/ui_task/: display_line_buffer_provider.rs  extensions.rs  mod.rs  touch_handler.rs  ui_task.rs
ui/: main.slint  menu.slint  menu_item.slint
ui/pages/: page.slint  settings.slint
