[package]
edition = "2021"
name = "rs-watch"
version = "0.1.0"
license = "MIT"

[features]
default=["hw-board-zs"]
hw-board-zs=[]
hw-board-dk=[]

[dependencies]
embassy-futures = { version = "0.1.0" , git = "https://github.com/igiona/embassy.git", branch = "nrf5340-app_add_SPIM4" }
embassy-sync = { version = "0.6.0" , git = "https://github.com/igiona/embassy.git", branch = "nrf5340-app_add_SPIM4", features = ["defmt"] }
embassy-executor = { version = "0.6.0" , git = "https://github.com/igiona/embassy.git", branch = "nrf5340-app_add_SPIM4", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.2" , git = "https://github.com/igiona/embassy.git", branch = "nrf5340-app_add_SPIM4", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-nrf = { version = "0.2.0" , git = "https://github.com/igiona/embassy.git", branch = "nrf5340-app_add_SPIM4", features = ["defmt", "nrf5340-app-s", "time-driver-rtc1", "time", "gpiote", "unstable-pac", "nfc-pins-as-gpio"] }
embassy-net = { version = "0.4.0" , git = "https://github.com/igiona/embassy.git", branch = "nrf5340-app_add_SPIM4", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet"] }
embassy-usb = { version = "0.3.0" , git = "https://github.com/igiona/embassy.git", branch = "nrf5340-app_add_SPIM4", features = ["defmt"] }
embedded-io-async = { version = "0.6.1" }

defmt = "0.3"
defmt-rtt = "0.4"

static_cell = "2"
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
rand = { version = "0.8.4", default-features = false }
embedded-storage = "0.3.1"
usbd-hid = "0.8.1"
serde = { version = "1.0.136", default-features = false }

slint = { version = "1.8.0", default-features = false, features = ["compat-1-2", "unsafe-single-threaded", "libm", "renderer-software"] }
embedded-alloc = "0.6.0"
embedded-graphics = "0.8.1"
gc9a01-rs = "0.4.2"
embedded-hal = "1.0.0"
embedded-hal-bus = "0.2.0"
# This crate supports the display GC9A01 too, but I prefer to go with the embedded-graphics for now.
# Maybe a performance comparison would be interesting
# mipidsi = "0.8.0"

[profile.release]
debug = 2

[build-dependencies]
slint-build = "1.8.0"
